Complete Iteration 2: README qtGUI/qtExt + 6 UML diagrams
Documentazione aggiunta:

1. qtGUI/README.md (sostituito, backup in README.md.old)
   - Modulo JavaFX GUI completo
   - 7 packages documentati: controllers, services, models, charts, dialogs, utils, views
   - Architettura MVC con Service Layer
   - Integrazione JavaFX (FXML, CSS, Scene Builder)
   - Sistema theming Dark/Light mode
   - Data visualization con PCA

2. qtExt/README.md (nuovo)
   - Suite testing e benchmarking
   - 2 packages: tests, utility
   - 6 test classes per validazione algoritmo
   - Framework benchmark con metriche performance
   - Dataset generator per testing sintetico

Diagrammi UML (PlantUML):

3. docs/uml/qtGUI/controllers/controllers_package.puml
   - 5 controllers: Main, Home, Clustering, Results, Settings
   - Pattern MVC, dependency injection

4. docs/uml/qtGUI/services/services_package.puml
   - Service Layer: ClusteringService, DataImportService, ExportService
   - Background task execution con JavaFX Task

5. docs/uml/qtGUI/models/models_package.puml
   - DTOs: ClusteringResult, ClusteringConfiguration
   - Enum: DataSource

6. docs/uml/qtGUI/views/charts_dialogs_utils.puml
   - Charts: ClusterScatterChart con PCA
   - Dialogs: About, DatasetPreview, Statistics
   - Utils: ApplicationContext, ThemeManager (Singleton)

7. docs/uml/qtExt/tests/tests_package.puml
   - 6 test classes per algoritmo, cluster, data operations, distanze
   - Approccio unit testing con assertions Java native

8. docs/uml/qtExt/utility/utility_package.puml
   - QTBenchmark, BenchmarkResult, RunBenchmark
   - DatasetGenerator per dati sintetici
   - Framework analisi scalabilita' e performance

Iterazione 2/3 completata (4-5 ore)
Prossimo: Iterazione 3 (4 Sequence diagrams + Manuale utente)